# football-analysist

./: .gitignore  Dockercompose.yml  Dockerfile  README.md  app.py  cloudinary_config.py  main.py  pyproject.toml  requirements.txt  setup.py  setup.sh
Ball/: __init__.py  ball.py
Team/: team.py
ViewTransform/: __init__.py  view_tranform.py
config/: config.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/components/: ErrorMessage.css  ErrorMessage.jsx  FileUpload.css  FileUpload.jsx  LoadingState.css  LoadingState.jsx  MatchStatistics.css  MatchStatistics.jsx  Navbar.jsx  ProcessedVideoDisplay.css  ProcessedVideoDisplay.jsx  VideoPlayer.css  VideoPlayer.jsx  VideoPreview.css  VideoPreview.jsx
frontend/src/pages/: Home.css  Home.jsx  Project.jsx
frontend/src/pages/solution/: Solution.jsx  index.css
frontend/src/services/: videoService.js
pitch_annotator/: __init__.py  soccer.py
src/: __init__.py  ball_detection.py  custom_expection.py  jersey_number.py  logger.py  pitch_detection.py  player_detection.py  player_tracking.py  radar.py  speed.py  team_classfication.py
utils/: __init__.py  gemini.py  statistics.py  utils.py
