[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gdown>=5.2.0",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "protobuf>=6.31.0",
    "pytesseract>=0.3.13",
    "scikit-learn>=1.6.1",
    "sentencepiece>=0.2.0",
    "supervision>=0.25.1",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "ultralytics>=8.3.135",
    "umap>=0.1.1",
    "umap-learn>=0.5.7",
]
