[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloudinary>=1.44.1",
    "fastapi>=0.115.12",
    "gdown>=5.2.0",
    "google-generativeai>=0.8.5",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "protobuf>=3.20.0,<3.21.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.6.1",
    "sentencepiece>=0.2.0",
    "supervision>=0.25.1",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "ultralytics>=8.3.135",
    "uvicorn>=0.34.3",
]
